removed modify functionality and added health cascade route

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
 ignore = E501,H301,H306
+builtins=ConnectionAbortedError
 [pytest]
 addopts = -v --cov-report term-missing --cov=gatekeeper
